--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.scrollbar {
+    width: 50%;
+    overflow: auto;
+    padding: 0 10px;
+    overflow: hidden;
+}
+
+.scrollbar:hover {
+    overflow-y: scroll;
+}
+
+#scrollbar2::-webkit-scrollbar {
+    width: 12px;
+}
+
+#scrollbar2::-webkit-scrollbar-track {
+    border-radius: 8px;
+    background-color: #e7e7e7;
+    border: 1px solid #cacaca;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+}
+
+#scrollbar2::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #363636;
+}
