--- a/public/css/app.css
+++ b/public/css/app.css
@@ -986,6 +986,9 @@ video {
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-rows-5 {
   grid-template-rows: repeat(5, minmax(0, 1fr));
 }
